enum-derived/tests/rand/14-rand-trait-not-imported.stderr
error[E0599]: no variant or associated item named `rand` found for enum `Sample` in the current scope
 --> tests/rand/14-rand-trait-not-imported.rs:9:22
  |
2 | pub enum Sample {
  | --------------- variant or associated item `rand` not found for this enum
...
9 |     let _s = Sample::rand();
  |                      ^^^^ variant or associated item not found in `Sample`
  |
  = help: items from traits can only be used if the trait is in scope
help: trait `Rand` which provides `rand` is implemented but not in scope; perhaps you want to import it
  |
1 + use enum_derived::Rand;
  |
