enum-derived/tests/rand/14-rand-trait-not-imported.rs
#[derive(enum_derived::Rand)]
pub enum Sample {
    A,
    B,
    C,
}

fn main() {
    let _s = Sample::rand();
}

